teacher modules updated
